--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <div class="profile">
-                <img src="https://github.com/ZigaoWang.png" alt="Zigao Wang" class="profile-img">
+                <img id="zigao-img" draggable="false" src="https://github.com/ZigaoWang.png" alt="Zigao Wang" class="profile-img">
                 <div class="profile-info">
                     <h1 class="gradient-text">Zigao Wang</h1>
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
@@ -74,30 +74,32 @@
                     <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="project-link">View Project</a>
                 </div>
 
-                <div class="project-card">
-                    <div class="project-content">
-                        <img src="https://camo.githubusercontent.com/05dbc0f4e30ecd46a97a17a87d8fb11d17232a3233dec391bb507336deab395b/68747470733a2f2f64617a7461622e636f6d2f6c6f676f2f3132382e706e67" alt="Daztab" class="project-logo">
-                        <h3>Daztab</h3>
-                        <p>A beautiful and customizable new tab page extension for modern browsers.</p>
-                    </div>
-                    <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="project-link">View Project</a>
+            <div class="project-card">
+                <div class="project-content">
+                    <img src="https://camo.githubusercontent.com/05dbc0f4e30ecd46a97a17a87d8fb11d17232a3233dec391bb507336deab395b/68747470733a2f2f64617a7461622e636f6d2f6c6f676f2f3132382e706e67"
+                         alt="Daztab" class="project-logo">
+                    <h3>Daztab</h3>
+                    <p>A beautiful and customizable new tab page extension for modern browsers.</p>
                 </div>
-
-                <div class="project-card">
-                    <div class="project-content">
-                        <img src="https://ollmao.com/ollmao_icon_dark.svg" alt="Ollmao" class="project-logo ollmao-logo">
-                        <h3>Ollmao</h3>
-                        <p>An innovative AI-powered project currently in development. Stay tuned!</p>
-                    </div>
-                    <a href="https://github.com/ZigaoWang/ollmao" target="_blank" class="project-link">View Project</a>
-                </div>
+                <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="project-link">View Project</a>
             </div>
-        </section>
 
-        <footer>
-            <p>© 2025 Zigao Wang · <a href="https://github.com/ZigaoWang/zigao.wang" target="_blank">Open Source</a> · MIT License</p>
-        </footer>
-    </div>
-    <script src="script.js"></script>
+            <div class="project-card">
+                <div class="project-content">
+                    <img src="https://ollmao.com/ollmao_icon_dark.svg" alt="Ollmao" class="project-logo ollmao-logo">
+                    <h3>Ollmao</h3>
+                    <p>An innovative AI-powered project currently in development. Stay tuned!</p>
+                </div>
+                <a href="https://github.com/ZigaoWang/ollmao" target="_blank" class="project-link">View Project</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 Zigao Wang · <a href="https://github.com/ZigaoWang/zigao.wang" target="_blank">Open Source</a> · MIT
+            License</p>
+    </footer>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
