add cps counter

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header>
             <div class="profile">
                 <img id="zigao-img" draggable="false" src="https://github.com/ZigaoWang.png" alt="Zigao Wang" class="profile-img">
+                <div id="cps-counter"></div>
                 <div class="profile-info">
                     <h1 class="gradient-text">Zigao Wang</h1>
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
