feat: add new projects and links animations

--- a/index.html
+++ b/index.html
@@ -67,29 +67,50 @@
             <div class="project-grid">
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="https://zap-notes.com/logo.jpeg" alt="ZapNotes" class="project-logo">
-                        <h3>ZapNotesApp</h3>
-                        <p>A minimalist note-taking application designed for speed and efficiency. Built with SwiftUI for iOS.</p>
+                        <img src="logo/zapnotes.jpg" alt="ZapNotes" class="project-logo">
+                        <h3>Zap Notes</h3>
+                        <p>An AI-powered note-taking app for recording and analyzing thoughts, ideas, and tasks.</p>
+                        <div class="project-links">
+                            <a href="https://apps.apple.com/us/app/zap-notes/id6740298881" target="_blank" class="store-link">
+                                <i class="fab fa-app-store-ios"></i> App Store
+                            </a>
+                            <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="github-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
                     </div>
-                    <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="project-link">View Project</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="https://camo.githubusercontent.com/05dbc0f4e30ecd46a97a17a87d8fb11d17232a3233dec391bb507336deab395b/68747470733a2f2f64617a7461622e636f6d2f6c6f676f2f3132382e706e67" alt="Daztab" class="project-logo">
-                        <h3>Daztab</h3>
-                        <p>A beautiful and customizable new tab page extension for modern browsers.</p>
+                        <img src="logo/goorno.jpg" alt="Go or No" class="project-logo">
+                        <h3>Go or No</h3>
+                        <p>An AR app for visually impaired users, helping you navigate your environment more safely and confidently.</p>
+                        <div class="project-links">
+                            <a href="https://apps.apple.com/us/app/go-or-no/id6744859953" target="_blank" class="store-link">
+                                <i class="fab fa-app-store-ios"></i> App Store
+                            </a>
+                            <a href="https://github.com/ZigaoWang/go-or-no" target="_blank" class="github-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
                     </div>
-                    <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="project-link">View Project</a>
                 </div>
 
                 <div class="project-card">
                     <div class="project-content">
-                        <img src="https://ollmao.com/ollmao_icon_dark.svg" alt="Ollmao" class="project-logo ollmao-logo">
-                        <h3>Ollmao</h3>
-                        <p>An innovative AI-powered project currently in development. Stay tuned!</p>
+                        <img src="logo/zapknowai.jpg" alt="ZapKnow AI" class="project-logo">
+                        <h3>ZapKnow AI</h3>
+                        <p>An AI app for trusted research that helps you find accurate answers backed by real papers.</p>
+                        <div class="project-links">
+                            <a href="https://apps.apple.com/us/app/zap-know-ai/id6745419831" target="_blank" class="store-link">
+                                <i class="fab fa-app-store-ios"></i> App Store
+                            </a>
+                            <a href="https://github.com/ZigaoWang/ZapKnowAI-iOS" target="_blank" class="github-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
                     </div>
-                    <a href="https://github.com/ZigaoWang/ollmao" target="_blank" class="project-link">View Project</a>
                 </div>
             </div>
         </section>
