--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <header>
             <div class="profile">
-                <img src="https://github.com/ZigaoWang.png" alt="Zigao Wang" class="profile-img">
+                <img src="zigao.jpg" alt="Zigao Wang" class="profile-img">
                 <div class="profile-info">
                     <h1 class="gradient-text">Zigao Wang</h1>
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
