fix: update organization logos to local file paths

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
                     <div class="organizations">
                         <a href="https://github.com/pacerclub" target="_blank" class="org-badge">
-                            <img src="https://github.com/pacerclub.png" alt="Pacer Club" class="org-logo">
+                            <img src="logo/pacerclub.jpg" alt="Pacer Club" class="org-logo">
                             <span>Founder of Pacer Club</span>
                         </a>
                         <a href="https://hackclub.com" target="_blank" class="org-badge">
-                            <img src="https://assets.hackclub.com/icon-rounded.svg" alt="Hack Club" class="org-logo">
+                            <img src="logo/hackclub.svg" alt="Hack Club" class="org-logo">
                             <span>Hack Club Member</span>
                         </a>
                     </div>
