fix: change Hack Club logo format from SVG to JPG

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <span>Founder of Pacer Club</span>
                         </a>
                         <a href="https://hackclub.com" target="_blank" class="org-badge">
-                            <img src="logo/hackclub.svg" alt="Hack Club" class="org-logo">
+                            <img src="logo/hackclub.jpg" alt="Hack Club" class="org-logo">
                             <span>Hack Club Member</span>
                         </a>
                     </div>
