feat: new ui and add daztab

--- a/index.html
+++ b/index.html
@@ -112,6 +112,22 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <div class="project-content">
+                        <img src="logo/daztab.jpg" alt="DazTab" class="project-logo">
+                        <h3>DazTab</h3>
+                        <p>A chrome extension that replaces your new tab page into a macOS-styled dashboard.</p>
+                        <div class="project-links">
+                            <a href="https://chromewebstore.google.com/detail/daztab/bagdffmnpgghcehadgmhcppaphpdfmbb" target="_blank" class="store-link">
+                                <i class="fab fa-chrome"></i> Chrome Store
+                            </a>
+                            <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="github-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
