feat: add preview link to daztab.com and style adjustments

--- a/index.html
+++ b/index.html
@@ -126,6 +126,11 @@
                                 <i class="fab fa-github"></i> GitHub
                             </a>
                         </div>
+                        <div class="preview-link">
+                            <a href="https://daztab.com" target="_blank">
+                                <i class="fas fa-external-link-alt"></i> Preview at daztab.com
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
