refactor: restructure project card layout for improved readability and styling

--- a/index.html
+++ b/index.html
@@ -68,15 +68,19 @@
                 <div class="project-card">
                     <div class="project-content">
                         <img src="logo/zapnotes.jpg" alt="ZapNotes" class="project-logo">
-                        <h3>Zap Notes</h3>
-                        <p>An AI-powered note-taking app for recording and analyzing thoughts, ideas, and tasks.</p>
-                        <div class="project-links">
-                            <a href="https://apps.apple.com/us/app/zap-notes/id6740298881" target="_blank" class="store-link">
-                                <i class="fab fa-app-store-ios"></i> App Store
-                            </a>
-                            <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="github-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
+                        <div class="project-info">
+                            <h3>Zap Notes</h3>
+                            <p>An AI-powered note-taking app for recording and analyzing thoughts, ideas, and tasks.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://apps.apple.com/us/app/zap-notes/id6740298881" target="_blank" class="store-link">
+                                    <i class="fab fa-app-store-ios"></i> App Store
+                                </a>
+                                <a href="https://github.com/ZigaoWang/ZapNotesApp" target="_blank" class="github-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -84,15 +88,19 @@
                 <div class="project-card">
                     <div class="project-content">
                         <img src="logo/goorno.jpg" alt="Go or No" class="project-logo">
-                        <h3>Go or No</h3>
-                        <p>An AR app for visually impaired users, helping you navigate your environment more safely and confidently.</p>
-                        <div class="project-links">
-                            <a href="https://apps.apple.com/us/app/go-or-no/id6744859953" target="_blank" class="store-link">
-                                <i class="fab fa-app-store-ios"></i> App Store
-                            </a>
-                            <a href="https://github.com/ZigaoWang/go-or-no" target="_blank" class="github-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
+                        <div class="project-info">
+                            <h3>Go or No</h3>
+                            <p>An AR app for visually impaired users, helping you navigate your environment more safely and confidently.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://apps.apple.com/us/app/go-or-no/id6744859953" target="_blank" class="store-link">
+                                    <i class="fab fa-app-store-ios"></i> App Store
+                                </a>
+                                <a href="https://github.com/ZigaoWang/go-or-no" target="_blank" class="github-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -100,15 +108,19 @@
                 <div class="project-card">
                     <div class="project-content">
                         <img src="logo/zapknowai.jpg" alt="ZapKnow AI" class="project-logo">
-                        <h3>Zap Know AI</h3>
-                        <p>An AI app for trusted research that helps you find accurate answers backed by real papers.</p>
-                        <div class="project-links">
-                            <a href="https://apps.apple.com/us/app/zap-know-ai/id6745419831" target="_blank" class="store-link">
-                                <i class="fab fa-app-store-ios"></i> App Store
-                            </a>
-                            <a href="https://github.com/ZigaoWang/ZapKnowAI-iOS" target="_blank" class="github-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
+                        <div class="project-info">
+                            <h3>Zap Know AI</h3>
+                            <p>An AI app for trusted research that helps you find accurate answers backed by real papers.</p>
+                        </div>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://apps.apple.com/us/app/zap-know-ai/id6745419831" target="_blank" class="store-link">
+                                    <i class="fab fa-app-store-ios"></i> App Store
+                                </a>
+                                <a href="https://github.com/ZigaoWang/ZapKnowAI-iOS" target="_blank" class="github-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -116,20 +128,24 @@
                 <div class="project-card">
                     <div class="project-content">
                         <img src="logo/daztab.jpg" alt="DazTab" class="project-logo">
-                        <h3>DazTab</h3>
-                        <p>A chrome extension that replaces your new tab page into a macOS-styled dashboard.</p>
-                        <div class="project-links">
-                            <a href="https://chromewebstore.google.com/detail/daztab/bagdffmnpgghcehadgmhcppaphpdfmbb" target="_blank" class="store-link">
-                                <i class="fab fa-chrome"></i> Chrome Store
-                            </a>
-                            <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="github-link">
-                                <i class="fab fa-github"></i> GitHub
-                            </a>
+                        <div class="project-info">
+                            <h3>DazTab</h3>
+                            <p>A chrome extension that replaces your new tab page into a macOS-styled dashboard.</p>
                         </div>
-                        <div class="preview-link">
-                            <a href="https://daztab.com" target="_blank">
-                                <i class="fas fa-external-link-alt"></i> Preview at daztab.com
-                            </a>
+                        <div class="project-actions">
+                            <div class="project-links">
+                                <a href="https://chromewebstore.google.com/detail/daztab/bagdffmnpgghcehadgmhcppaphpdfmbb" target="_blank" class="store-link">
+                                    <i class="fab fa-chrome"></i> Chrome Store
+                                </a>
+                                <a href="https://github.com/ZigaoWang/daztab" target="_blank" class="github-link">
+                                    <i class="fab fa-github"></i> GitHub
+                                </a>
+                            </div>
+                            <div class="preview-link">
+                                <a href="https://daztab.com" target="_blank">
+                                    <i class="fas fa-external-link-alt"></i> Preview at daztab.com
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
