feat: add location information to profile and enhance styling for better visibility

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
                 <div class="profile-info">
                     <h1 class="gradient-text">Zigao Wang</h1>
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
+                    <span class="location-text">
+                        <i class="fas fa-map-marker-alt"></i> Shanghai, China
+                    </span>
                     <div class="organizations">
                         <a href="https://github.com/pacerclub" target="_blank" class="org-badge">
                             <img src="logo/pacerclub.jpg" alt="Pacer Club" class="org-logo">
