--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container">
         <header>
             <div class="profile">
-                <img src="zigao.jpg" alt="Zigao Wang" class="profile-img">
+                <div class="profile-image-container">
+                    <img src="zigao.jpg" alt="Zigao Wang" class="profile-img">
+                </div>
                 <div class="profile-info">
                     <h1 class="gradient-text">Zigao Wang</h1>
                     <p class="subtext">Student Developer & Tech Enthusiast</p>
