feat: update social link styles and adjust layout for improved alignment

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         </header>
 
         <section class="social-links">
-            <a href="https://github.com/ZigaoWang" target="_blank" class="social-link">
+            <a href="https://github.com/ZigaoWang" target="_blank" class="social-link github">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://zigao.cc" target="_blank" class="social-link">
+            <a href="https://zigao.cc" target="_blank" class="social-link blog">
                 <i class="fas fa-blog"></i>
             </a>
-            <a href="mailto:a@zigao.wang" class="social-link">
+            <a href="mailto:a@zigao.wang" class="social-link email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://twitter.com/zigaow" target="_blank" class="social-link">
+            <a href="https://twitter.com/zigaow" target="_blank" class="social-link twitter">
                 <i class="fab fa-x-twitter"></i>
             </a>
             <a href="https://monkeytype.com/profile/ZigaoWang" target="_blank" class="social-link monkeytype">
